@@ -1,5 +1,8 @@
 File Name: CHANGES
 
+09/24/2017 FASP 2.0.3:
+- Add testgs.c; preparing for testing new sparse matrix data structures.
+
 09/23/2017 FASP 2.0.2:
 - Remove almost ALL unused variables and functions.
 - Rewrite "skip rest of the line" to avoid problems with long lines.
